cmake_minimum_required(VERSION 3.9)

project(freader)
if (${PANDA_BUILD_FIRMWARE_EMU})
SET(CMAKE_C_COMPILER gcc )
SET(CMAKE_CXX_COMPILER g++ )
elseif (CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64" OR CMAKE_SYSTEM_PROCESSOR MATCHES "armv7l")
SET(CMAKE_C_COMPILER gcc )
SET(CMAKE_CXX_COMPILER g++ )
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
SET(CMAKE_C_COMPILER aarch64-rpi3-linux-gnu-gcc )
SET(CMAKE_CXX_COMPILER aarch64-rpi3-linux-gnu-g++ )
SET(CMAKE_AR aarch64-rpi3-linux-gnu-ar )
SET(CMAKE_C_FLAGS "-lpthread -fPIC")
SET(CMAKE_CXX_FLAGS "-fpermissive -lpthread -fPIC")
set(CMAKE_CXX_LINK_FLAGS "")
set(CMAKE_C_LINK_FLAGS "")
set(CMAKE_OSX_SYSROOT "")
elseif (${ARM32})
SET(CMAKE_C_COMPILER arm-linux-gnueabihf-gcc)
SET(CMAKE_CXX_COMPILER arm-linux-gnueabihf-g++ )
else ()
SET(CMAKE_C_COMPILER aarch64-linux-gnu-gcc )
SET(CMAKE_CXX_COMPILER aarch64-linux-gnu-g++ )
endif ()
SET(CMAKE_C_FLAGS "-lpthread -O3")
SET(CMAKE_CXX_FLAGS "-fpermissive -lpthread -O3 -Wno-psabi")

if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
include_directories(../../include ../../../3rdParty ../../../3rdParty/nlohmann)
else ()
find_package(PkgConfig REQUIRED)
pkg_search_module(timeswipe REQUIRED timeswipe)

include_directories(${timeswipe_INCLUDE_DIRS} ../../include ../../../3rdParty ../../../3rdParty/nlohmann)
link_directories(${timeswipe_LIBRARY_DIRS})
endif ()

set(SOURCE_FILES main.cpp)

add_executable(freader_static ${SOURCE_FILES})
set_target_properties(freader_static PROPERTIES CXX_STANDARD 17)

if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
target_link_libraries(freader_static ${CMAKE_SOURCE_DIR}/../../../build/libtimeswipe.a)
set(CMAKE_LD_FLAGS "")
set(CMAKE_SHARED_LINKER_FLAGS "")
set(CMAKE_EXE_LINKER_FLAGS "")
target_compile_options(freader_static PRIVATE -fexceptions)
else ()
add_executable(freader ${SOURCE_FILES})
set_target_properties(freader PROPERTIES CXX_STANDARD 17)
target_link_libraries(freader_static ${CMAKE_SOURCE_DIR}/../../../build/libtimeswipe.a pthread atomic)
target_link_libraries(freader ${timeswipe_LIBRARIES} atomic)
endif()
