cmake_minimum_required(VERSION 3.9)

SET(TARGET_NAME "rPIspi")

project(SPIterminal C CXX)
if (CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64" OR CMAKE_SYSTEM_PROCESSOR MATCHES "armv7l")
SET(CMAKE_C_COMPILER gcc )
SET(CMAKE_CXX_COMPILER g++ )
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
SET(CMAKE_C_COMPILER aarch64-rpi3-linux-gnu-gcc )
SET(CMAKE_CXX_COMPILER aarch64-rpi3-linux-gnu-g++ )
SET(CMAKE_AR aarch64-rpi3-linux-gnu-ar )
SET(CMAKE_C_FLAGS "-lpthread -fPIC")
SET(CMAKE_CXX_FLAGS "-fpermissive -lpthread -fPIC")
set(CMAKE_CXX_LINK_FLAGS "")
set(CMAKE_C_LINK_FLAGS "")
set(CMAKE_OSX_SYSROOT "")
elseif (${ARM32})
SET(CMAKE_C_COMPILER arm-linux-gnueabihf-gcc)
SET(CMAKE_CXX_COMPILER arm-linux-gnueabihf-g++ )
else ()
SET(CMAKE_C_COMPILER aarch64-linux-gnu-gcc )
SET(CMAKE_CXX_COMPILER aarch64-linux-gnu-g++ )
endif ()
SET(CMAKE_C_FLAGS "-lpthread -O3")
SET(CMAKE_CXX_FLAGS "-fpermissive -lpthread -O3 -Wno-psabi")

if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
include_directories(../../include ../../../3rdParty ../../../3rdParty/nlohmann/include ../../../firmware/src/Interfaces ../../../firmware/src/Communication)
else ()
find_package(PkgConfig REQUIRED)
pkg_search_module(timeswipe REQUIRED timeswipe)

include_directories(${timeswipe_INCLUDE_DIRS} ../../../3rdParty ../../../3rdParty/nlohmann/include ../../../firmware/src/Interfaces ../../../firmware/src/Communication)
link_directories(${timeswipe_LIBRARY_DIRS})
endif ()

set(SOURCE_FILES main.cpp)

add_executable(${TARGET_NAME} main.cpp console.cpp)

if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
target_link_libraries(${TARGET_NAME} ${CMAKE_SOURCE_DIR}/../../build/libtimeswipe.a)
set(CMAKE_LD_FLAGS "")
set(CMAKE_SHARED_LINKER_FLAGS "")
set(CMAKE_EXE_LINKER_FLAGS "")
target_compile_options(${TARGET_NAME} PRIVATE -fexceptions)
target_include_directories(${TARGET_NAME} PUBLIC ../../src/RaspberryPi)
else ()
target_include_directories(${TARGET_NAME} PUBLIC /usr/local/include/TimeSwipeDriver)
target_include_directories(${TARGET_NAME} PUBLIC ../../src/Interfaces)
target_include_directories(${TARGET_NAME} PUBLIC ../../src/Communication)
target_include_directories(${TARGET_NAME} PUBLIC ../../src/RaspberryPi)

target_link_libraries(${TARGET_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/../../build/libtimeswipe.a ${timeswipe_LIBRARIES})
endif()
